new path added to POM

--- a/pom.xml
+++ b/pom.xml
@@ -40,3 +40,12 @@
     </plugins>
   </build>
 </project>
+
+<classpath>
+    <classpathentry kind="src" output="target/test-classes" path="C:/vscodeProjects/JavaVSC/SeleniumIntro/selenium_automation/seleniumWindows.java">
+        <attributes>
+            <attribute name="optional" value="true"/>
+            <attribute name="maven.pomderived" value="true"/>
+            <attribute name="test" value="true"/>
+        </attributes>
+    </classpathentry>
